--- a/app/globals.css
+++ b/app/globals.css
@@ -1,26 +1,24 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+  --background: #121212;
+  --foreground: #F2F2F2;
+  --hover: #BDBDBD;
 }
 
 body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+button {
+  background: var(--foreground);
+  color: var(--background);
+  @apply p-2 rounded-md cursor-pointer
+}
+
+button:hover {
+  background: var(--hover);
+  color: var(--foreground);
 }
